# ollama-langchain-agent

./: .env.example  .gitignore  pyproject.toml  readme.md  requirements.txt
src/: config.py  main.py
src/agents/: oracle.py
src/models/: data_models.py
src/tools/: search.py
