[tool.poetry]
name = "ollama-langgraph-agent"
version = "0.1.0"
description = ""
authors = ["sobebarali <sobebar.ali17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain-core = ">=0.3.12,<0.4.0"
langchain-community = "^0.3.3"      
ipykernel = "6.29.5"
semantic-router = "^0.0.72"
pyppeteer = "2.0.0"
nest-asyncio = "1.6.0"
praw = "^7.8.0"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.6.0"
langchain-ollama = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
